tooltip no longer gets cut off

--- a/playbook/app/pb_kits/playbook/pb_collapsible/_collapsible.scss
+++ b/playbook/app/pb_kits/playbook/pb_collapsible/_collapsible.scss
@@ -3,20 +3,24 @@
 
 [class^=pb_collapsible_kit] {
   padding: $space_md;
+  
 
   .toggle-content {
     display: none;
     height: 0;
     padding-bottom: 0 !important;
     padding-top: 0 !important;
-    overflow: hidden;
     transition: height 300ms, padding 300ms ease-in-out;
   }
-
+  
+  .overflow-hidden {
+    overflow: hidden;
+  }
   .toggle-content.is-visible {
     display: block;
     height: auto;
   }
+
   .icon_wrapper:hover {
       color: $primary
   }
